--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+body{
+  background:#ffffff;
+}
+
 .navbar{
   position: fixed;
   z-index: 1000;
@@ -16,7 +20,7 @@ h1, h2 {
 }
 
 h1 {
-  color: #3b82f6; /* azul moderno */
+
   
   padding: 0.5em;
   border-radius: 5px;
@@ -36,6 +40,9 @@ h3{
   color: #3b82f6;
   animation: distac 2s infinite;
 }
+h4{
+  color: #b0d3f7;
+}
 
 p {
   color: #b0d3f7; /* cinza suave */
@@ -45,26 +52,7 @@ p {
   color: #b0d3f7;
 }
 
-.parent {
-  position: relative;
-  background: radial-gradient(circle, rgba(15, 15, 15, 0.9) 20%, rgba(20, 28, 38, 0.95) 100%);
-  min-height: 100vh;
-}
 
-.parent::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  min-height: 100vh;
-  height: 100vh;
-  opacity: 1;
-  background: url('/images/background.png'); /* ajuste o caminho conforme necessário */
-  background-repeat: no-repeat;
-  background-size: cover;
-  z-index: -1;
-}
 
 #services{
   background: rgba(15, 15, 15, .65);
@@ -129,6 +117,17 @@ footer{
   html,body{
   overflow-x: hidden;
 }
+#navbarMenu {
+  background-color: #fff !important; /* amarelo em sm */
+  max-width: 60%;
+  
+
+}
+
+.nav-link{
+  color: #1f2937;
+}
+
 }
 
 
