faixa-hero-buttons-flex

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -102,6 +102,9 @@
 
 .buttons{
   animation: fadeInUp 3s ease ;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .faixa-hero:hover{
