--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -36,19 +36,19 @@
 }
 
 .hero-background {
-    margin-top: 4rem;
+    
     background: rgba(0, 0, 0, 1);
     min-height: 522px;
     height: 100%;
     width: 100%;
-    margin-bottom:50px;
+    margin-top:50px;
     position: relative;
     z-index: 0;
 }
 
 .hero-background::before{
     content: '';
-    background: url('/images/background2.png');
+    background: url('/images/background2.webp');
     position: absolute;
     z-index: -1;
     background-position: center;
