--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -38,7 +38,7 @@
 .hero-background {
     
     background: rgba(0, 0, 0, 1);
-    min-height: 522px;
+    min-height: 100vh;
     height: 100%;
     width: 100%;
     margin-top:50px;
@@ -55,7 +55,7 @@
     background-size: cover;
     top: 0;
     left: 0;
-    min-height: 522px;
+    min-height: 100vh;
     height: 100%;
     min-width: 100%;
     opacity: .4;
