--- a/src/index.css
+++ b/src/index.css
@@ -37,12 +37,15 @@ p {
 .card{
   
   border: none;
+  border: transparent;
   border-radius: 1em;
   transition: transform 0.3s ease;
 }
 .card-body{
-  background: linear-gradient(0, #FFE06B, #f9faf8, #FFE06B);
+  
   border-radius: .3rem;
+  border: none;
+  box-shadow: none;
 }
 .card:hover {
   transform: translateY(-5px);
