--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
 body{
-  background-color: #1a1a14;
-   color: #f0f0f0;
+font-family: "Roboto", sans-serif;
+
 }
 
 
@@ -18,7 +20,7 @@ h1, h2 {
 
 h2 {
   
-  font-weight: 700;
+  font-weight: bolder;
  
 }
 h3{
@@ -32,7 +34,12 @@ p {
   font-size: 1.1rem;
 }
 
-
+title{
+     text-align: center;
+   padding: 16px;
+   font-size: 48px;
+   font-weight: 800;
+}
 
 .card{
   
@@ -92,6 +99,18 @@ footer{
  display: flex;
  align-items: center;
  
+}
+
+.scroll-indicator span {
+  font-size: 2rem;
+  animation: bounce 1.5s infinite;
+  display: inline-block;
+  color: #212529;
+}
+
+@keyframes bounce {
+  0%, 100% { transform: translateY(0); }
+  50% { transform: translateY(10px); }
 }
 
 @media (max-width:450px) {
