--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -14,7 +14,8 @@
 }
 
 .logo{
-   height: 4rem;
+   height: 3rem;
+
 }
 
 .nav-item .nav-link{
@@ -28,4 +29,9 @@
 
 #top{
     position: fixed;
+}
+@media (max-width:600px) {
+    .logo{
+        height: 2rem;
+    }
 }
