--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,8 +1,8 @@
 
 .proj-title{
    text-align: center;
-   padding: 16px;
-   font-size: 48px;
+   padding: 1rem;
+   font-size: 3rem;
    font-weight: 800;
    margin-bottom: 16px;
 }
