--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -1,8 +1,9 @@
 .service-title{
-    
    text-align: center;
-   padding: 16px;
-   font-size: 48px;
+   padding: 1rem;
+   font-size: 3rem;
    font-weight: 800;
+   margin-bottom: 16px;
+   margin: 3rem 0 3rem 0;
 
 }
