--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,7 +4,7 @@
 }
 
 .navbar{
-  background: linear-gradient(0, #ffdf6b, #FFF8DC, #FFE06B);
+  background: linear-gradient(0deg, #4F46E5, #A78BFA 60%, #E0E7FF);
   position: fixed;
   z-index: 1000;
   width: 100%;
@@ -15,7 +15,14 @@
 
 .logo{
    height: 3rem;
+   border-radius: 50%;
+   background:linear-gradient(0deg, #4F46E5, #A78BFA 60%, #E0E7FF);
+   border: 1px solid black;
 
+}
+.logo img{
+    border-radius: 100%;
+    height: 100%;
 }
 
 .nav-item .nav-link{
@@ -24,7 +31,7 @@
     color: var(--link-color);
 }
 .nav-item .nav-link:hover{
-    text-decoration: 4px solid underline #ffdf6b;
+    text-decoration: 4px solid underline  #9F4EFF;
 }
 
 #top{
