--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -37,13 +37,15 @@
 
 .hero-background {
     
-    background: rgba(0, 0, 0, 1);
+    background: url(/images/background.png);
     min-height: 100vh;
     height: 100%;
     width: 100%;
     margin-top:50px;
     position: relative;
     z-index: 0;
+    background-position: center;
+    background-size: cover;
 }
 
 
