--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,19 +4,20 @@
 }
 
 .navbar{
-  background: linear-gradient(0deg, #4F46E5, #A78BFA 60%, #E0E7FF);
+     background: linear-gradient(0deg,#1E1E2F 0%,#60F0FF 35%,#FF66D4 70%,#1E1E2F 100%);
   position: fixed;
   z-index: 1000;
   width: 100%;
   height: 4rem;
   top: 0;
+  
 
 }
 
 .logo{
    height: 3rem;
    border-radius: 50%;
-   background:linear-gradient(0deg, #4F46E5, #A78BFA 60%, #E0E7FF);
+   background: linear-gradient(0deg,#1E1E2F 0%,#60F0FF 35%,#FF66D4 70%,#1E1E2F 100%);
    border: 1px solid black;
 
 }
@@ -29,6 +30,7 @@
     font-size: 16px;
     font-weight: 600;
     color: var(--link-color);
+    font-family: "Orbitron", sans-serif;
 }
 .nav-item .nav-link:hover{
     text-decoration: 4px solid underline  #9F4EFF;
